--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+ctransformers==0.2.27
 dataclasses-json==0.6.4
 Deprecated==1.2.14
 dirtyjson==1.0.8
+diskcache==5.6.3
 distro==1.9.0
 exceptiongroup==1.2.0
 filelock==3.13.3
@@ -24,13 +26,15 @@ huggingface-hub==0.22.2
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
-llama-index==0.9.34
+llama-index==0.10.30
 llama-index-agent-openai==0.2.2
 llama-index-cli==0.1.11
-llama-index-core==0.10.27
+llama-index-core==0.10.30
+llama-index-embeddings-huggingface==0.2.0
 llama-index-embeddings-openai==0.1.7
 llama-index-indices-managed-llama-cloud==0.1.5
 llama-index-legacy==0.9.48
+llama-index-llms-llama-cpp==0.1.3
 llama-index-llms-openai==0.1.14
 llama-index-multi-modal-llms-openai==0.1.4
 llama-index-program-openai==0.1.5
@@ -38,9 +42,11 @@ llama-index-question-gen-openai==0.1.3
 llama-index-readers-file==0.1.13
 llama-index-readers-llama-parse==0.1.4
 llama-parse==0.4.0
-llamaindex-py-client==0.1.16
+llama_cpp_python==0.2.62
+llamaindex-py-client==0.1.18
 MarkupSafe==2.1.5
 marshmallow==3.21.1
+minijinja==1.0.16
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
@@ -65,18 +71,22 @@ packaging==24.0
 pandas==2.0.3
 pillow==10.3.0
 pinecone-client==3.2.2
+py-cpuinfo==9.0.0
 pydantic==2.6.4
-pydantic-core==2.16.3
+pydantic_core==2.16.3
 PyMuPDF==1.24.1
 PyMuPDFb==1.24.1
 pypdf==4.1.0
-pypdf2==3.0.1
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.2
+scikit-learn==1.4.2
+scipy==1.13.0
+sentence-transformers==2.7.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
@@ -84,14 +94,15 @@ SQLAlchemy==2.0.29
 striprtf==0.0.26
 sympy==1.12
 tenacity==8.2.3
+threadpoolctl==3.4.0
 tiktoken==0.6.0
 tokenizers==0.15.2
 torch==2.2.2
 tqdm==4.66.2
 transformers==4.39.3
 triton==2.2.0
-typing-extensions==4.10.0
 typing-inspect==0.9.0
+typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 wrapt==1.16.0
