--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
+altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -18,6 +21,8 @@ exceptiongroup==1.2.0
 filelock==3.13.3
 frozenlist==1.4.1
 fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
@@ -26,6 +31,8 @@ huggingface-hub==0.22.2
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 llama-index==0.10.30
 llama-index-agent-openai==0.2.2
 llama-index-cli==0.1.11
@@ -44,8 +51,10 @@ llama-index-readers-llama-parse==0.1.4
 llama-parse==0.4.0
 llama_cpp_python==0.2.62
 llamaindex-py-client==0.1.18
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
+mdurl==0.1.2
 minijinja==1.0.16
 mpmath==1.3.0
 multidict==6.0.5
@@ -71,9 +80,13 @@ packaging==24.0
 pandas==2.0.3
 pillow==10.3.0
 pinecone-client==3.2.2
+protobuf==4.25.3
 py-cpuinfo==9.0.0
+pyarrow==16.0.0
 pydantic==2.6.4
 pydantic_core==2.16.3
+pydeck==0.9.0
+Pygments==2.18.0
 PyMuPDF==1.24.1
 PyMuPDFb==1.24.1
 pypdf==4.1.0
@@ -81,23 +94,31 @@ PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+referencing==0.35.1
 regex==2023.12.25
 requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.1
 safetensors==0.4.2
 scikit-learn==1.4.2
 scipy==1.13.0
 sentence-transformers==2.7.0
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.29
+streamlit==1.34.0
 striprtf==0.0.26
 sympy==1.12
 tenacity==8.2.3
 threadpoolctl==3.4.0
 tiktoken==0.6.0
 tokenizers==0.15.2
+toml==0.10.2
+toolz==0.12.1
 torch==2.2.2
+tornado==6.4
 tqdm==4.66.2
 transformers==4.39.3
 triton==2.2.0
@@ -105,5 +126,6 @@ typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+watchdog==4.0.0
 wrapt==1.16.0
 yarl==1.9.4
